# gmail_filter_manager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
gmail_filter_manager/: constants.py  gfm_extract.py  gfm_make.py
test/: test_named_actions.py
