[project]
name = "gmail-filter-manager"
version = "0.1.3"
description = "Gmail filter manager using YAML format."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["gmail", "yaml", "cli"]
authors = [
    { name = "rcmdnk", email = "rcmdnk@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "ruamel-yaml>=0.19.0",
]

[project.scripts]
gfm_extract = "gmail_filter_manager:gfm_extract"
gfm_make = "gmail_filter_manager:gfm_make"

[project.urls]
Homepage = "https://github.com/rcmdnk/gmail_filter_manager"
Repository = "https://github.com/rcmdnk/gmail_filter_manager"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
